# cloudify-vsphere-plugin

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.txt  LICENSE  Makefile  README.md  README.rst  circle.yml  connection_config_example.json  constraints.txt  dev-requirements.txt  example-vsphere-and-nsx.yaml  extra-packaging-instructions.sh  plugin.yaml  plugin_1_4.yaml  plugin_1_5.yaml  python311.patch  requirements-3.6.in  requirements-3.6.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  unit_tests_config_example.json  unit_tests_config_example_DHCP.json  unit_tests_config_example_woDHCP.json  v2_plugin.yaml
.circleci/: config.yml  merge_docs.py  package_release.py  py3fixers  test_examples.py
cloudify_vsphere/: __version__.py
docs/: Makefile  conf.py  examples.rst  index.rst  make.bat  requirements.rst  types.rst
examples/: blueprint.yaml  blueprint.yaml.example  compute-network.yaml  compute-storage.yaml  compute.yaml  connection_config.json.example  connection_config.yaml.example  network.yaml  other_vm.yaml  resize-blueprint.yaml  resource-pool-parent.yaml  resource-pool.yaml  unit_tests_config.json.example  unit_tests_config.yaml.example
integration_tests/: local_tests.py  test_local_workflows.py
manager_blueprint/: README.md  inputs.json.template  inputs.yaml.template  requirements.txt  vsphere-manager-blueprint.yaml  vsphere.yaml
network_plugin/: network.py  port.py
server_plugin/: __init__.py  server.py
storage_plugin/: __init__.py  storage.py
system_tests.old/: vsphere_handler.py
(+272 files in other folders)
