[metadata]
name = cloudify-vsphere-plugin
version = 1.2rc1
summary = Cloudify plugin for vSphere infrastructure.
description-file =
    README.rst
author = cloudify-cosmo

classifier =
    Environment :: Cloud orchestration
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

requires-python = >=2.7

[files]
packages =
     vsphere_plugin_common
     server_plugin
     network_plugin
     storage_plugin

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
